# vDSO-test

./: BENCHMARK.md  Cargo.toml  README.md
benches/: time_benchmark.rs
src/: main.rs  quick_test.rs  tsc_vs_vdso.rs
