[package]
name = "vdso-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "quick_test"
path = "src/vdso_vs_chrono.rs"

[[bin]]
name = "tsc_vs_vdso"
path = "src/tsc_vs_vdso.rs"


[features]
default = ["tsc"]
tsc = []

[dependencies]
libc = "0.2"
num_cpus = "1.16"
rayon = "1.8"
chrono = "0.4.41"