[package]
name = "vdso-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"


[[bench]]
name = "time_benchmark"
harness = false


[features]
default = ["tsc"]
tsc = []

[dependencies]
libc = "0.2"
num_cpus = "1.16"
rayon = "1.8"
chrono = "0.4.41"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }